kuber/gitops/devicehub/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devicehub
  labels:
    name: devicehub
