kuber/gitops/devicehub/devicehub-android-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adbd
  labels:
    app.kubernetes.io/name: adbd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adbd
  ports:
    - name: adb
      port: 5037
      targetPort: 5037
      protocol: TCP
    - name: uiautomator2-8200
      port: 8200
      targetPort: 8200
      protocol: TCP
    - name: uiautomator2-8201
      port: 8201
      targetPort: 8201
      protocol: TCP
    - name: uiautomator2-8202
      port: 8202
      targetPort: 8202
      protocol: TCP
    - name: uiautomator2-8203
      port: 8203
      targetPort: 8203
      protocol: TCP
    - name: uiautomator2-8204
      port: 8204
      targetPort: 8204
      protocol: TCP
    - name: uiautomator2-8205
      port: 8205
      targetPort: 8205
      protocol: TCP
    - name: uiautomator2-8206
      port: 8206
      targetPort: 8206
      protocol: TCP
    - name: uiautomator2-8207
      port: 8207
      targetPort: 8207
      protocol: TCP
    - name: uiautomator2-8208
      port: 8208
      targetPort: 8208
      protocol: TCP
    - name: uiautomator2-8209
      port: 8209
      targetPort: 8209
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: devicehub-provider
  labels:
    app.kubernetes.io/name: devicehub-provider
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: devicehub-provider
  ports:
    - name: p12010
      port: 12010
      targetPort: 12010
      protocol: TCP
    - name: p12011
      port: 12011
      targetPort: 12011
      protocol: TCP
    - name: p12012
      port: 12012
      targetPort: 12012
      protocol: TCP
    - name: p12013
      port: 12013
      targetPort: 12013
      protocol: TCP
    - name: p12014
      port: 12014
      targetPort: 12014
      protocol: TCP
    - name: p12015
      port: 12015
      targetPort: 12015
      protocol: TCP
    - name: p12016
      port: 12016
      targetPort: 12016
      protocol: TCP
    - name: p12017
      port: 12017
      targetPort: 12017
      protocol: TCP
    - name: p12018
      port: 12018
      targetPort: 12018
      protocol: TCP
    - name: p12019
      port: 12019
      targetPort: 12019
      protocol: TCP
    - name: p12020
      port: 12020
      targetPort: 12020
      protocol: TCP
    - name: p12021
      port: 12021
      targetPort: 12021
      protocol: TCP
    - name: p12022
      port: 12022
      targetPort: 12022
      protocol: TCP
    - name: p12023
      port: 12023
      targetPort: 12023
      protocol: TCP
    - name: p12024
      port: 12024
      targetPort: 12024
      protocol: TCP
    - name: p12025
      port: 12025
      targetPort: 12025
      protocol: TCP
    - name: p12026
      port: 12026
      targetPort: 12026
      protocol: TCP
    - name: p12027
      port: 12027
      targetPort: 12027
      protocol: TCP
    - name: p12028
      port: 12028
      targetPort: 12028
      protocol: TCP
    - name: p12029
      port: 12029
      targetPort: 12029
      protocol: TCP
    - name: p12030
      port: 12030
      targetPort: 12030
      protocol: TCP
    - name: p12031
      port: 12031
      targetPort: 12031
      protocol: TCP
    - name: p12032
      port: 12032
      targetPort: 12032
      protocol: TCP
    - name: p12033
      port: 12033
      targetPort: 12033
      protocol: TCP
    - name: p12034
      port: 12034
      targetPort: 12034
      protocol: TCP
    - name: p12035
      port: 12035
      targetPort: 12035
      protocol: TCP
    - name: p12036
      port: 12036
      targetPort: 12036
      protocol: TCP
    - name: p12037
      port: 12037
      targetPort: 12037
      protocol: TCP
    - name: p12038
      port: 12038
      targetPort: 12038
      protocol: TCP
    - name: p12039
      port: 12039
      targetPort: 12039
      protocol: TCP
    - name: p12040
      port: 12040
      targetPort: 12040
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: adbd-2
  labels:
    app.kubernetes.io/name: adbd-2
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adbd-2
  ports:
    - name: adb
      port: 5037
      targetPort: 5037
      protocol: TCP
    - name: uiautomator2-8200
      port: 8200
      targetPort: 8200
      protocol: TCP
    - name: uiautomator2-8201
      port: 8201
      targetPort: 8201
      protocol: TCP
    - name: uiautomator2-8202
      port: 8202
      targetPort: 8202
      protocol: TCP
    - name: uiautomator2-8203
      port: 8203
      targetPort: 8203
      protocol: TCP
    - name: uiautomator2-8204
      port: 8204
      targetPort: 8204
      protocol: TCP
    - name: uiautomator2-8205
      port: 8205
      targetPort: 8205
      protocol: TCP
    - name: uiautomator2-8206
      port: 8206
      targetPort: 8206
      protocol: TCP
    - name: uiautomator2-8207
      port: 8207
      targetPort: 8207
      protocol: TCP
    - name: uiautomator2-8208
      port: 8208
      targetPort: 8208
      protocol: TCP
    - name: uiautomator2-8209
      port: 8209
      targetPort: 8209
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: devicehub-provider-2
  labels:
    app.kubernetes.io/name: devicehub-provider-2
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: devicehub-provider-2
  ports:
    - name: p12041
      port: 12041
      targetPort: 12041
      protocol: TCP
    - name: p12042
      port: 12042
      targetPort: 12042
      protocol: TCP
    - name: p12043
      port: 12043
      targetPort: 12043
      protocol: TCP
    - name: p12044
      port: 12044
      targetPort: 12044
      protocol: TCP
    - name: p12045
      port: 12045
      targetPort: 12045
      protocol: TCP
    - name: p12046
      port: 12046
      targetPort: 12046
      protocol: TCP
    - name: p12047
      port: 12047
      targetPort: 12047
      protocol: TCP
    - name: p12048
      port: 12048
      targetPort: 12048
      protocol: TCP
    - name: p12049
      port: 12049
      targetPort: 12049
      protocol: TCP
    - name: p12050
      port: 12050
      targetPort: 12050
      protocol: TCP
    - name: p12051
      port: 12051
      targetPort: 12051
      protocol: TCP
    - name: p12052
      port: 12052
      targetPort: 12052
      protocol: TCP
    - name: p12053
      port: 12053
      targetPort: 12053
      protocol: TCP
    - name: p12054
      port: 12054
      targetPort: 12054
      protocol: TCP
    - name: p12055
      port: 12055
      targetPort: 12055
      protocol: TCP
    - name: p12056
      port: 12056
      targetPort: 12056
      protocol: TCP
    - name: p12057
      port: 12057
      targetPort: 12057
      protocol: TCP
    - name: p12058
      port: 12058
      targetPort: 12058
      protocol: TCP
    - name: p12059
      port: 12059
      targetPort: 12059
      protocol: TCP
    - name: p12060
      port: 12060
      targetPort: 12060
      protocol: TCP
    - name: p12061
      port: 12061
      targetPort: 12061
      protocol: TCP
    - name: p12062
      port: 12062
      targetPort: 12062
      protocol: TCP
    - name: p12063
      port: 12063
      targetPort: 12063
      protocol: TCP
    - name: p12064
      port: 12064
      targetPort: 12064
      protocol: TCP
    - name: p12065
      port: 12065
      targetPort: 12065
      protocol: TCP
    - name: p12066
      port: 12066
      targetPort: 12066
      protocol: TCP
    - name: p12067
      port: 12067
      targetPort: 12067
      protocol: TCP
    - name: p12068
      port: 12068
      targetPort: 12068
      protocol: TCP
    - name: p12069
      port: 12069
      targetPort: 12069
      protocol: TCP
    - name: p12070
      port: 12070
      targetPort: 12070
      protocol: TCP
